--- a/src/styles/toppost.css
+++ b/src/styles/toppost.css
@@ -28,9 +28,17 @@
 }
 @media only screen and (max-width:768px)
 {
+    .topPost-main-img
+    {
+        width:77%;
+    }
+    .topPost-main-head
+    {
+        width: 80%;
+    }
     .topPost-sec-text-container
     {
-        width: 65%;
-        font-size: 15px;
+        width: 60%;
+        font-size: 14px;
     }
 }
