--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@media only screen and (max-width:768px) {
+  
 }
 
 .App-header {
