--- a/src/styles/Vertgallery.css
+++ b/src/styles/Vertgallery.css
@@ -86,10 +86,12 @@
         width: 335px;
         margin: 0;
         margin-top: 0;
+        height: 350px;
     }
     .primary-container
     {
         width: 100%;
+        height: 90%;
     }
     .sec-parent
     {
@@ -97,7 +99,7 @@
     }
     .text-block-1 
     {
-        top:70%;
+        top:45%;
         left: 40%;  
         width: 180px;
         font-size: 17px;
