--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -24,6 +24,7 @@
     align-content: space-around;
     justify-content: space-between;
     margin-top: 5%;
+    margin-left:4%
 }
 .load-more-container
 {
