--- a/src/Article-component/artnav.css
+++ b/src/Article-component/artnav.css
@@ -56,6 +56,7 @@
 .article
 {
     margin-right: 7%;
+    width: 800px;
 }
 .article-container
 {
@@ -81,6 +82,13 @@
     display: flex;
     width: 320px;
     justify-content: space-between;
+}
+.auth-img
+{
+    width: 70%;
+    height: 70%;
+    border-radius: 50%;
+    margin-right: 4%;
 }
 .date 
 {
@@ -139,9 +147,12 @@
 .article-content
 {
     word-wrap: break-word;
-    width: 600px;
+    width: 700px;
     font-family: 'Amiri', serif;
     font-weight: 580;
+    margin: auto;
+    margin-top: 4%;
+    text-align: left;
 }
 .content-image
 {
