--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -47,3 +47,10 @@
 {
     border-bottom: 4px solid #eb7373;
 }
+@media only screen and (max-width:768px)
+{
+    .navbar
+    {
+        display: none;
+    }
+}
