--- a/src/styles/latest.css
+++ b/src/styles/latest.css
@@ -1,7 +1,7 @@
 .latest-container
 {
-    width: 452px;
-    height: fit-content;
+    width: 432px;
+    height: 450px;
     border-radius: 7px;
     box-shadow: 0px 0px lightgray 35px;
 }
