--- a/src/styles/latest.css
+++ b/src/styles/latest.css
@@ -1,9 +1,10 @@
 .latest-container
 {
     width: 432px;
-    height: 550px;
+    height: 580px;
     border-radius: 7px;
     box-shadow: 0px 0px lightgray 35px;
+    padding: 5px;
 }
 .latest-img
 {
