--- a/src/styles/catpost.css
+++ b/src/styles/catpost.css
@@ -53,9 +53,8 @@
 {
     .cat-posts
     {
-        width: 60%;
-        margin-bottom: 4%;
-        margin-top: 5%;
+        width: 90vw;
+        margin-top: 2%;
         padding: 2px;
         border: 0.5px solid lightgray;
         justify-content: space-around;
@@ -63,7 +62,6 @@
     .cat-posts-img
     {
         width: 31%;
-        
     }
     .cat-posts-text-container
     {
