--- a/src/styles/latest.css
+++ b/src/styles/latest.css
@@ -47,7 +47,7 @@
 {
     .latest-container
     {
-        width: 24%;
+        width: 85vw;
         margin-bottom: 4%;
         padding: 10px;
         border: 0.5px solid lightgray;
