--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-a{
-  width: 100vw;
+@media only screen and (max-width:768px)
+{
+  a{
+    width: 100vw;
+  }
 }
